[tool.poetry]
name = "tensormap-server"
version = "0.1.0"
description = "TensorMap Python Server"
authors = ["Saatwik Vasishtha <saatwik.vasishtha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
numpy = "^2.1.0"
pandas = "^2.2.3"
flask = "^3.0.3"
flask-cors = "^4.0.1"
flask-restful = "^0.3.10"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.3.6"
tensorflow = "^2.20.0"
tensorboard = "^2.20.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
flatten-json = "^0.1.13"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
Werkzeug = "^3.0.4"
protobuf = "^5.28.3"
rsa = "^4.9"
zope-event = "^5.0"
python-socketio = "^5.11.0"
python-engineio = "^4.9.1"
h5py = "^3.11.0"
gevent = "^24.11.1"
greenlet = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
